--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,3 +144,72 @@ jobs:
       - name: Publish to npm (with provenance)
         working-directory: pkg/npm
         run: npm publish --access public --provenance
+
+  # Update Homebrew tap formula with new version and SHA256 hashes
+  publish-homebrew:
+    name: Publish to Homebrew tap
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get version from tag
+        id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Download release tarballs and compute SHA256
+        id: sha256
+        run: |
+          BASE="https://github.com/armgabrielyan/deadbranch/releases/download/v${{ steps.version.outputs.version }}"
+          V="${{ steps.version.outputs.version }}"
+          curl -sL "$BASE/deadbranch-${V}-x86_64-apple-darwin.tar.gz"       -o x86_64-apple-darwin.tar.gz
+          curl -sL "$BASE/deadbranch-${V}-aarch64-apple-darwin.tar.gz"      -o aarch64-apple-darwin.tar.gz
+          curl -sL "$BASE/deadbranch-${V}-x86_64-unknown-linux-gnu.tar.gz"  -o x86_64-linux-gnu.tar.gz
+          curl -sL "$BASE/deadbranch-${V}-aarch64-unknown-linux-gnu.tar.gz" -o aarch64-linux-gnu.tar.gz
+          echo "x86_64_darwin=$(sha256sum x86_64-apple-darwin.tar.gz | awk '{print $1}')"       >> $GITHUB_OUTPUT
+          echo "aarch64_darwin=$(sha256sum aarch64-apple-darwin.tar.gz | awk '{print $1}')"     >> $GITHUB_OUTPUT
+          echo "x86_64_linux=$(sha256sum x86_64-linux-gnu.tar.gz | awk '{print $1}')"           >> $GITHUB_OUTPUT
+          echo "aarch64_linux=$(sha256sum aarch64-linux-gnu.tar.gz | awk '{print $1}')"         >> $GITHUB_OUTPUT
+
+      - name: Checkout deadbranch (main repo)
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+          path: deadbranch
+
+      - name: Checkout homebrew-tap
+        uses: actions/checkout@v4
+        with:
+          repository: armgabrielyan/homebrew-tap
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+          path: homebrew-tap
+
+      - name: Update formula files
+        run: |
+          patch_formula() {
+            local FORMULA="$1"
+            local V="${{ steps.version.outputs.version }}"
+            sed -i "s/version \".*\"/version \"${V}\"/" "$FORMULA"
+            sed -i "/x86_64-apple-darwin\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.x86_64_darwin }}\"/}" "$FORMULA"
+            sed -i "/aarch64-apple-darwin\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.aarch64_darwin }}\"/}" "$FORMULA"
+            sed -i "/x86_64-unknown-linux-gnu\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.x86_64_linux }}\"/}" "$FORMULA"
+            sed -i "/aarch64-unknown-linux-gnu\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.aarch64_linux }}\"/}" "$FORMULA"
+          }
+          patch_formula "deadbranch/pkg/homebrew/deadbranch.rb"
+          patch_formula "homebrew-tap/Formula/deadbranch.rb"
+
+      - name: Commit and push to homebrew-tap
+        run: |
+          cd homebrew-tap
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Formula/deadbranch.rb
+          git commit -m "chore: update deadbranch to v${{ steps.version.outputs.version }}"
+          git push
+
+      - name: Commit and push pkg/homebrew to main repo
+        run: |
+          cd deadbranch
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add pkg/homebrew/deadbranch.rb
+          git commit -m "chore: update homebrew formula to v${{ steps.version.outputs.version }}"
+          git push
