feat: add shell completions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-utilities", "development-tools"]
 [dependencies]
 # CLI Framework & Argument Parsing
 clap = { version = "4.5", features = ["derive", "cargo", "env"] }
+clap_complete = "4"
 
 # Terminal UI & Styling
 console = "0.16"              # Colors, emoji, terminal detection
