--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Get version from tag
         id: version
@@ -115,7 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -160,23 +160,43 @@ jobs:
         run: |
           BASE="https://github.com/armgabrielyan/deadbranch/releases/download/v${{ steps.version.outputs.version }}"
           V="${{ steps.version.outputs.version }}"
-          curl -sL "$BASE/deadbranch-${V}-x86_64-apple-darwin.tar.gz"       -o x86_64-apple-darwin.tar.gz
-          curl -sL "$BASE/deadbranch-${V}-aarch64-apple-darwin.tar.gz"      -o aarch64-apple-darwin.tar.gz
-          curl -sL "$BASE/deadbranch-${V}-x86_64-unknown-linux-gnu.tar.gz"  -o x86_64-linux-gnu.tar.gz
-          curl -sL "$BASE/deadbranch-${V}-aarch64-unknown-linux-gnu.tar.gz" -o aarch64-linux-gnu.tar.gz
+
+          download_with_retry() {
+            local URL="$1"
+            local OUT="$2"
+            local MAX_ATTEMPTS=10
+            local WAIT=15
+            for attempt in $(seq 1 $MAX_ATTEMPTS); do
+              HTTP_CODE=$(curl -sL -w "%{http_code}" "$URL" -o "$OUT")
+              if [ "$HTTP_CODE" = "200" ]; then
+                echo "Downloaded $URL (attempt $attempt)"
+                return 0
+              fi
+              echo "Attempt $attempt/$MAX_ATTEMPTS: got HTTP $HTTP_CODE for $URL, retrying in ${WAIT}s..."
+              sleep $WAIT
+            done
+            echo "Failed to download $URL after $MAX_ATTEMPTS attempts"
+            return 1
+          }
+
+          download_with_retry "$BASE/deadbranch-${V}-x86_64-apple-darwin.tar.gz"       x86_64-apple-darwin.tar.gz
+          download_with_retry "$BASE/deadbranch-${V}-aarch64-apple-darwin.tar.gz"      aarch64-apple-darwin.tar.gz
+          download_with_retry "$BASE/deadbranch-${V}-x86_64-unknown-linux-gnu.tar.gz"  x86_64-linux-gnu.tar.gz
+          download_with_retry "$BASE/deadbranch-${V}-aarch64-unknown-linux-gnu.tar.gz" aarch64-linux-gnu.tar.gz
+
           echo "x86_64_darwin=$(sha256sum x86_64-apple-darwin.tar.gz | awk '{print $1}')"       >> $GITHUB_OUTPUT
           echo "aarch64_darwin=$(sha256sum aarch64-apple-darwin.tar.gz | awk '{print $1}')"     >> $GITHUB_OUTPUT
           echo "x86_64_linux=$(sha256sum x86_64-linux-gnu.tar.gz | awk '{print $1}')"           >> $GITHUB_OUTPUT
           echo "aarch64_linux=$(sha256sum aarch64-linux-gnu.tar.gz | awk '{print $1}')"         >> $GITHUB_OUTPUT
 
       - name: Checkout deadbranch (main repo)
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
           path: deadbranch
 
       - name: Checkout homebrew-tap
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           repository: armgabrielyan/homebrew-tap
           token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
@@ -187,7 +207,8 @@ jobs:
           patch_formula() {
             local FORMULA="$1"
             local V="${{ steps.version.outputs.version }}"
-            sed -i "s/version \".*\"/version \"${V}\"/" "$FORMULA"
+            # Preserve any trailing comment (e.g. # x-release-please-version) on the version line
+            sed -i "s/\(version \"\)[^\"]*\(\"[^#]*\)\(#.*\)\?/\1${V}\2\3/" "$FORMULA"
             sed -i "/x86_64-apple-darwin\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.x86_64_darwin }}\"/}" "$FORMULA"
             sed -i "/aarch64-apple-darwin\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.aarch64_darwin }}\"/}" "$FORMULA"
             sed -i "/x86_64-unknown-linux-gnu\.tar\.gz\"/{n;s/sha256 \".*\"/sha256 \"${{ steps.sha256.outputs.x86_64_linux }}\"/}" "$FORMULA"
