feat: add man page generation and distribution
  - build.rs generates man/deadbranch.1 via clap_mangen at build time
  - pre-commit hook auto-regenerates and stages the file on CLI changes
  - CI lint job fails if the committed man page is stale
  - release tarballs now include deadbranch.1 alongside the binary
  - homebrew formula installs the man page automatically (man deadbranch)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,18 @@ jobs:
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
+      - name: Build (for generated file check)
+        run: cargo build
+
+      - name: Check man page is up to date
+        run: |
+          git add --intent-to-add man/deadbranch.1
+          if ! git diff --exit-code man/deadbranch.1; then
+            echo "Error: man/deadbranch.1 is out of date."
+            echo "Run 'cargo build' locally and commit the updated man/deadbranch.1."
+            exit 1
+          fi
+
   build-release:
     name: Build Release (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
