--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,11 @@ assert_cmd = "2.1"            # Test CLI commands
 predicates = "3.1"            # Test assertions
 tempfile = "3.24"             # Temporary directories for tests
 
+[build-dependencies]
+clap = { version = "4.5", features = ["derive"] }
+clap_complete = "4"
+clap_mangen = "0.2"
+
 [profile.release]
 lto = true                    # Link-time optimization
 codegen-units = 1             # Better optimization
