chore: update man page during release please bump

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -26,7 +26,11 @@
       "path": "pkg/npm/package.json",
       "jsonpath": "$.version"
     },
-    "pkg/homebrew/deadbranch.rb"
+    "pkg/homebrew/deadbranch.rb",
+    {
+      "type": "generic",
+      "path": "man/deadbranch.1"
+    }
   ],
   "packages": {
     ".": {
